[package]
name = "addchain"
description = "Generate addition chains"
version = "0.2.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/addchain"
readme = "README.md"
categories = ["algorithms", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
num-bigint = {version="0.3", default-features=false}
num-integer = "0.1"
num-traits = {version="0.2", default-features=false}
